<resources>
    <string name="downloading_configuration_info">downloading configuration info</string>
    <string name="downloading_configuration_info_failed">downloading configuration info failed</string>
    <string name="configuration_info_downloaded">configuration info downloaded</string>
    <string name="downloading_charge_info">downloading charge info</string>
    <string name="downloading_charge_info_failed">downloading charge info failed</string>
    <string name="charge_info_downloaded">charge info downloaded</string>
    <string name="downloading_court_detail">downloading court detail</string>
    <string name="downloading_court_detail_failed">downloading court detail failed</string>
    <string name="court_detail_downloaded">court detail downloaded</string>
    <string name="downloading_public_holidays">downloading public holidays</string>
    <string name="downloading_public_holidays_failed">downloading public holidays failed</string>
    <string name="public_holidays_downloaded">public holidays downloaded</string>
    <string name="downloading_infringement_locations">downloading infringement locations</string>
    <string name="downloading_infringement_locations_failed">downloading infringement locations failed</string>
    <string name="infringement_locations_downloaded">infringement locations downloaded</string>
    <string name="downloading_vosi_action">downloading vosi actions</string>
    <string name="downloading_vosi_action_failed">downloading vosi actions failed</string>
    <string name="vosi_action_downloaded">vosi actions downloaded</string>
    <string name="downloading_identification_type">downloading identification types</string>
    <string name="downloading_identification_type_failed">downloading identification types failed</string>
    <string name="identification_type_downloaded">identification types downloaded</string>
    <string name="downloading_countries">downloading countries</string>
    <string name="downloading_countries_failed">downloading countries failed</string>
    <string name="countries_downloaded">countries downloaded</string>
    <string name="downloading_ticket_numbers">downloading ticket numbers</string>
    <string name="downloading_ticket_numbers_failed">downloading ticket numbers failed</string>
    <string name="ticket_numbers_downloaded">ticket numbers downloaded</string>
    <string name="synchronisation_required">Synchronization required\r\nPlease press \'UPDATE\' to synchronise.</string>
    <string name="query_updates">QUERY UPDATES</string>
    <string name="update">UPDATE</string>
    <string name="data_is_up_to_date">Data is up to date.</string>
    <string name="uploading_ticket">uploading ticket</string>
    <string name="uploading_ticket_failed">uploading ticket failed</string>
    <string name="uploading_ticket_successful">uploading ticket successful</string>
    <string name="uploading_vosi_action_capture">uploading vosi action</string>
    <string name="uploading_vosi_action_capture_failed">uploading vosi action failed</string>
    <string name="uploading_vosi_action_capture_successful">uploading vosi action successful</string>
    <string name="uploading_user_activity_log">uploading user activity log</string>
    <string name="uploading_user_activity_log_failed">uploading user activity log failed</string>
    <string name="uploading_user_activity_log_successful">uploading user activity log successful</string>
    <string name="vosi_action">Vosi Action:</string>
    <string name="delete_evidence_failed">delete evidence failed</string>
    <string name="uploading_evidence_successfull">uploading evidence successfull</string>
    <string name="uploading_evidence_failed">uploading evidence failed</string>
    <string name="uploading_evidence">uploading evidence</string>
    <string name="no_more_tickets_available">No more %s tickets are available, please run updates to top up tickets.</string>
    <string name="available_tickets">Available tickets:</string>
    <string name="unsynchronised_tickets">Unsynchronised tickets:</string>
    <string name="not_printed">Not printed:</string>
    <string name="unknown">Unknown</string>
    <string name="zambian_id">Zambian ID</string>
    <string name="zambian_passport">Zambian Passport</string>
    <string name="foreign_id_document">Foreign ID Document</string>
    <string name="foreign_Passport">Foreign Passport</string>
    <string name="zambian_drivers_card">Zambian Drivers Card</string>
    <string name="zone_speed">Zone: %1$s Speed: %2$s</string>
    <string name="camera_prosecution">Camera Prosecution</string>
    <string name="comments">Comments:</string>
    <string name="app_name">iTicket</string>
    <string name="next_Button_Text">Next</string>
    <string name="back_Button_Text">Back</string>
    <string name="finish_Button_Text">Finish</string>
    <string name="wizard_Button_Text">Wizard</string>
    <string name="title_fragment_drivers_Licence">Drivers Licence Card</string>
    <string name="title_fragment_drivers_Licence_Ex">Driver Information</string>
    <string name="text_fragment_drivers_Licence_Name">Name:</string>
    <string name="text_fragment_drivers_Licence_Gender">Gender:</string>
    <string name="text_fragment_drivers_Licence_Id_Number">Id No:</string>
    <string name="text_fragment_drivers_Licence_id_type">Id Type:</string>
    <string name="text_fragment_drivers_Licence_country">Country:</string>
    <string name="text_fragment_drivers_Licence_Initials">Initials:</string>
    <string name="text_fragment_drivers_Licence_Lic_no">Licence No:</string>
    <string name="text_fragment_drivers_Licence_Date_Of_Birth">DOB:</string>
    <string name="text_fragment_drivers_Licence_Valid">Valid:</string>
    <string name="text_fragment_drivers_Licence_Issued">Issued:</string>
    <string name="text_fragment_drivers_Licence_Code">Code</string>
    <string name="text_fragment_drivers_Licence_Restrictions">Restrictions:</string>
    <string name="text_fragment_drivers_Licence_First_Issue">First Issue</string>
    <string name="text_fragment_drivers_Licence_Name_Placeholder">NAME PLACEHOLDER</string>
    <string name="text_fragment_drivers_Licence_Veh_Restrictions">Veh Restrictions</string>
    <string name="text_fragment_drivers_Licence_First_Name">First name:</string>
    <string name="text_fragment_drivers_Licence_Last_Name">Last name:</string>
    <string name="text_fragment_drivers_Licence_Occupation">Occupation:</string>
    <string name="text_fragment_drivers_Licence_Email">Email:</string>
    <string name="text_fragment_drivers_Licence_Mobile_Number">Mobile No:</string>
    <string name="fragment_drivers_title_a">Drivers License Card</string>
    <string name="fragment_drivers_title_b">Driver information</string>
    <string name="fragment_drivers_person_details_title">Personal details</string>
    <string name="text_fragment_drivers_Licence_Gardian">Parent/Gaurdian:</string>
    <string name="fragment_drivers_Licence_not_valid_rsa_id">Not a valid RSA ID number</string>
    <string name="text_fragment_address_capture_ex_address_line_one">Line One:</string>
    <string name="text_fragment_address_capture_ex_address_line_two">Line Two:</string>
    <string name="text_fragment_address_capture_ex_address_description">Description:</string>
    <string name="text_fragment_address_capture_ex_address_line_suburb">Suburb:</string>
    <string name="text_fragment_address_capture_ex_address_line_city">City:</string>
    <string name="text_fragment_address_capture_ex_address_line_code">Code:</string>
    <string name="text_fragment_address_capture_ex_address_home_address">Home Address</string>
    <string name="text_fragment_address_capture_ex_address_business_address">Business Address</string>
    <string name="text_fragment_address_capture_ex_address_postal_address">Postal Address</string>
    <string name="text_fragment_address_capture_ex_address_offence_address">Offence Location</string>
    <string name="fragment_signature_title">Infringer Signature</string>
    <string name="title_fragment_vehicle_Licence">Vehicle Licence Disc</string>
    <string name="title_fragment_vehicle_Licence_Ex">Vehicle Information</string>
    <string name="text_fragment_vehicle_Licence_Lic_no">Licence No:</string>
    <string name="text_fragment_vehicle_Licence_Disk_no">Disk No:</string>
    <string name="text_fragment_vehicle_Licence_Description">Description:</string>
    <string name="text_fragment_vehicle_Licence_Make">Make:</string>
    <string name="text_fragment_vehicle_Licence_Model">Model:</string>
    <string name="text_fragment_vehicle_Licence_Colour">Colour:</string>
    <string name="text_fragment_vehicle_Licence_Series">Series:</string>
    <string name="text_fragment_vehicle_Licence_Vin">VIN:</string>
    <string name="text_fragment_vehicle_Licence_Engine_No">Engine No:</string>
    <string name="text_fragment_vehicle_Licence_Expiry_Date">Expiry Date:</string>
    <string name="text_fragment_vehicle_register_no">Register No:</string>
    <string name="text_fragment_vehicle_Licence_type">Type:</string>
    <string name="fragment_vehicle_title_a">Vehicle License Disc</string>
    <string name="fragment_vehicle_title_b">Vehicle information</string>
    <string name="fragment_vehicle_date_message">Date</string>
    <string name="text_place_holder">-</string>
    <string name="fragment_charge_code_text">Code:</string>
    <string name="fragment_charge_1_title">Charge 1</string>
    <string name="fragment_charge_2_title">Charge 2</string>
    <string name="fragment_charge_3_title">Charge 3</string>
    <string name="fragment_charge_notes">Notes</string>
    <string name="offence_date">Offence Date:</string>
    <string name="offence_date_ex">Offence Date</string>
    <string name="fragment_charge_description_text">Description:</string>
    <string name="fragment_charge_offence_text">Offence:</string>
    <string name="fragment_charge_regulation_text">Regulation:</string>
    <string name="fragment_charge_fine_amount_text">Amount:</string>
    <string name="fragment_charge_alternative_text">Alternative</string>
    <string name="fragment_charge_title">Charges</string>
    <string name="fragment_charge_please_capture_vehicle_info_message">Please capture vehicle information for non bylaw charges.</string>
    <string name="fragment_charge_amount_invalid">Please enter a valid charge amount.</string>
    <string name="fragment_print_add_additional_notice">Add additional notice</string>
    <string name="title_activity_capture">CaptureActivity</string>
    <string name="title_activity_camera_capture">CameraCaptureActivity</string>
    <string name="fragment_scan_button_text">SCAN BARCODE</string>
    <string name="activity_about_title">About</string>
    <string name="activity_login_title">Login</string>
    <string name="activity_login_username_text_view_text">Username</string>
    <string name="activity_login_password_text_view_text">Password</string>
    <string name="activity_login_login_button_text">Login</string>
    <string name="activity_login_login_failed_message">Username or password is invalid.</string>
    <string name="charge_info_list_is_empty">Charge info list is empty</string>
    <string name="activity_signature_clear_button_text">Clear</string>
    <string name="activity_signature_ok_button_text">OK</string>
    <string name="activity_signature_title">Officer Signature</string>
    <string name="activity_court_message">Please verify the court date</string>
    <string name="activity_court_district_text">District:</string>
    <string name="activity_court_court_text">Court:</string>
    <string name="activity_court_room_text">Room:</string>
    <string name="activity_court_court_date_text">Court Date:</string>
    <string name="activity_cancellation_reason_label_text">Cancellation Reason</string>
    <string name="activity_cancellation_reason_other_reason_text">Please provide a reason</string>
</resources>