<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="za.co.kapsch.iticket.CourtActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/activity_court_message"
            android:id="@+id/textView"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:stretchColumns="0,1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/activity_court_district_text"
                    android:id="@+id/textView1"
                    android:gravity="right"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginLeft="5dp"
                    android:text="@string/text_place_holder"
                    android:id="@+id/districtNameTextView"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/activity_court_court_text"
                    android:id="@+id/textView2"
                    android:gravity="right"/>

                <Spinner
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:gravity="left"
                    android:layout_marginRight="10dp"
                    android:id="@+id/spinnerCourt"
                    android:layout_column="1" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/activity_court_court_date_text"
                    android:id="@+id/textView3"
                    android:gravity="right"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginLeft="5dp"
                    android:text="@string/text_place_holder"
                    android:id="@+id/courtDateTextView"
                    android:onClick="showCalendarDialog"/>

                <!--<CalendarView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:id="@+id/calendarView" />-->

            </TableRow>

        </TableLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/activity_signature_ok_button_text"
            android:id="@+id/saveCourtButton"
            android:layout_marginRight="10dp"
            android:onClick="saveCourt"/>

    </LinearLayout>
</RelativeLayout>
