<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriversLicenceFragment"
    android:background="#FFFFFF">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorBannerBackGround">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_fragment_drivers_Licence_Name_Placeholder"
            android:id="@+id/nameTextView"
            android:gravity="right"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:background="#ffffff">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/text_fragment_drivers_Licence_Gender"
                        android:textStyle="bold"
                        android:id="@+id/textView1"
                        android:gravity="right"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/text_place_holder"
                        android:layout_marginLeft="5dp"
                        android:id="@+id/genderTextView"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/text_fragment_drivers_Licence_Id_Number"
                        android:textStyle="bold"
                        android:id="@+id/textView2"
                        android:gravity="right"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/text_place_holder"
                        android:layout_marginLeft="5dp"
                        android:id="@+id/idNumberTextView"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/text_fragment_drivers_Licence_Lic_no"
                        android:textStyle="bold"
                        android:id="@+id/textView3"
                        android:gravity="right"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/text_place_holder"
                        android:layout_marginLeft="5dp"
                        android:id="@+id/licenceNoTextView"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/text_fragment_drivers_Licence_Date_Of_Birth"
                        android:textStyle="bold"
                        android:id="@+id/textView4"
                        android:gravity="right"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/text_place_holder"
                        android:layout_marginLeft="5dp"
                        android:id="@+id/dateOfBirthTextView"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/text_fragment_drivers_Licence_Restrictions"
                        android:textStyle="bold"
                        android:id="@+id/textView7"
                        android:gravity="right"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/text_place_holder"
                        android:layout_marginLeft="5dp"
                        android:id="@+id/restrictionsTextView"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/text_fragment_drivers_Licence_Issued"
                        android:textStyle="bold"
                        android:id="@+id/textView6"
                        android:gravity="right"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/text_place_holder"
                        android:layout_marginLeft="5dp"
                        android:id="@+id/issuedTextView"/>

                </LinearLayout>

              </LinearLayout>

            <ImageView
                android:id="@+id/driverImageView"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@mipmap/ic_launcher" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFF">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_fragment_drivers_Licence_Valid"
                android:textStyle="bold"
                android:id="@+id/textView5"
                android:gravity="right"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/text_place_holder"
                android:layout_marginLeft="5dp"
                android:id="@+id/validTextView"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:scrollbars="vertical"
            android:layout_weight="1">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1,2"
                android:paddingBottom="5dp"
                android:id="@+id/vehicleLicInfoTable">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBannerBackGround"
                    android:paddingTop="3dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/text_fragment_drivers_Licence_Code"
                        android:textStyle="bold"
                        android:id="@+id/textView15"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/text_fragment_drivers_Licence_Veh_Restrictions"
                        android:textStyle="bold"
                        android:id="@+id/textView8"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/text_fragment_drivers_Licence_First_Issue"
                        android:textStyle="bold"
                        android:id="@+id/textView18"/>

                </TableRow>

             </TableLayout>

        </ScrollView>

        <!--<ScrollView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="10dp"-->
            <!--android:scrollbars="vertical"-->
            <!--android:layout_weight="1">-->

            <!--<TableLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:stretchColumns="0,1,2"-->
                <!--android:paddingBottom="10dp"-->
                <!--android:id="@+id/vehicleLicInfoTable"-->
                <!--android:isScrollContainer="true">-->

             <!--</TableLayout>-->

        <!--</ScrollView>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="0"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_gravity="center_horizontal"
                android:text="@string/fragment_scan_button_text"
                android:id="@+id/scanBarcodeButton"/>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>


