<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="za.co.kapsch.iticket.CancellationReasonFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/activity_cancellation_reason_label_text"
                android:id="@+id/textView2"
                android:gravity="right"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:gravity="left"
                android:id="@+id/cancellationReasonSpinner"
                android:layout_column="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/activity_cancellation_reason_other_reason_text"
                android:textStyle="bold"
                android:id="@+id/provideReasonTextView"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:id="@+id/provideReasonEditText"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/activity_signature_ok_button_text"
            android:id="@+id/okButton"
            android:onClick="okButtonClick"/>

    </LinearLayout>

</FrameLayout>
